--- a/public/acs-html/index.html
+++ b/public/acs-html/index.html
@@ -26,6 +26,9 @@
     <link rel="canonical" href="https://acsvncredit.com/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>HỖ TRỢ VAY VỐN - ONLINEE</title>
 </head>
 
@@ -117,7 +120,17 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">LIÊN HỆ</a>
                         </li>
-
+                        <li class="nav-item">
+                            <div type="button" onclick="btnSearch()" class="btn_search_mobile_top"><i
+                                    class="fa fa-search"></i></div>
+                            <div class="search search_mobile" id="btn_search_mobile">
+                                <form role="search" method="get" class="search-form" action="https://minhbao.vn/">
+                                    <input type="text" name="s" id="s" placeholder="Nhập từ khóa"
+                                        class="form-control" />
+                                    <button class="btn_search"><i class="fa fa-search"></i></button>
+                                </form>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -3911,11 +3924,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="ct-footer">
+                    <div class="ct-footer mb-3">
                         <div class="title_footer">Thông tin liên hệ</div>
                         <h3>CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢO</h3>
                         <p><strong>Trụ sở chính:</strong> Số 319 Tây Thạnh, Phường Tây Thạnh, Quận Tân Phú, TP. HCM</p>
-                        <ul>
+                        <ul class="p-0">
                             <li><strong>1. Chi nhánh HCM</strong>: Số 319 Tây Thạnh, Phường Tây Thạnh, Quận Tân Phú, TP.
                                 HCM</li>
                             <li><strong>2. Chi nhánh Long An</strong>: Lô A6, Mỹ Hạnh Nam, Đức Hòa, Long An</li>
@@ -3945,7 +3958,7 @@
                 <div class="col-md-4">
                     <div class="ct-footer">
                         <div class="title_footer">Thông tin dịch vụ</div>
-                        <ul class="menu_bottom">
+                        <ul class="menu_bottom p-0">
                             <li id="menu-item-3996" class=""><a href="https://minhbao.vn/gioi-thieu/">Giới thiệu</a>
                             </li>
                             <li id="menu-item-3995"
@@ -4320,6 +4333,18 @@
         });
 
     </script> -->
+    <script>
+        function btnSearch() {
+            const flag = document.getElementById("btn_search_mobile").style.display
+            if (flag === 'none') {
+                document.getElementById("btn_search_mobile").style.display = "block";
+            } else {
+                document.getElementById("btn_search_mobile").style.display = "none"
+            }
+
+        }
+
+    </script>
 </body>
 
 </html>
