--- a/public/acs-html/tin-tuc-detail.html
+++ b/public/acs-html/tin-tuc-detail.html
@@ -12,9 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google" content="notranslate">
     <meta name="author" content="acsvncredit.com">
-    <meta name="title" content="HỖ TRỢ VAY VỐN - ONLINEE">
-    <meta name="description" content="HỖ TRỢ VAY VỐN - ONLINEE">
-    <meta name="keywords" content="HỖ TRỢ VAY VỐN - ONLINEE">
+    <meta name="title" content="CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢOE">
+    <meta name="description" content="CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢOE">
+    <meta name="keywords" content="CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢOE">
     <meta name="theme-color" content="#ff4c3b">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -26,7 +26,8 @@
     <link rel="canonical" href="https://acsvncredit.com/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <title>HỖ TRỢ VAY VỐN - ONLINE</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <title>CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢO</title>
 </head>
 
 <body>
