--- a/public/acs-html/index.html
+++ b/public/acs-html/index.html
@@ -3756,7 +3756,7 @@
         </div>
         <div class="copyright">© 2021 Bản quyền thuộc <a href="">minhbao.vn</a></div>
     </footer>
-    </div>
+
     <div class="dang_ky_fix">
         <a href="tel:0931 386 222" rel="noreferrer noopener">
             <i class="fa fa-phone" style="padding-right: 5px"></i>0931 386 222 </a>
@@ -3773,18 +3773,18 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
-<<<<<<< HEAD
+
     </script>
-=======
-        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"
         integrity="sha512-nhY06wKras39lb9lRO76J4397CH1XpRSLfLJSftTeo3+q2vP7PaebILH9TqH+GRpnOhfAGjuYMVmVTOZJ+682w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
->>>>>>> 709d77f159b5a53942526b997a03030f8a291f5c
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+
     <script>
         $(".btn_search_mobile_top").on("click", function () {
             $(".search_mobile").toggle("slow");
         });
+
         // function btnSearch() {
         //     const flag = document.getElementById("btn_search_mobile").style.display
         //     if (flag === 'none') {
