--- a/public/acs-html/index.html
+++ b/public/acs-html/index.html
@@ -123,10 +123,10 @@
                             <a class="nav-link active" aria-current="page" href="#">LIÊN HỆ</a>
                         </li>
                         <li class="nav-item">
-                            <button onclick="btnSearch()" class="btn_search_mobile_top openToggle"><i
-                                    class="fa fa-search"></i></button>
+                            <div type="button" onclick="btnSearch()" class="btn_search_mobile_top"><i
+                                    class="fa fa-search"></i></div>
                             <div class="search search_mobile" id="btn_search_mobile">
-                                <form role="search" method="get" class="search-form" action="">
+                                <form role="search" method="get" class="search-form" action="https://minhbao.vn/">
                                     <input type="text" name="s" id="s" placeholder="Nhập từ khóa"
                                         class="form-control" />
                                     <button class="btn_search"><i class="fa fa-search"></i></button>
