--- a/public/acs-html/anh-mau.html
+++ b/public/acs-html/anh-mau.html
@@ -1387,6 +1387,18 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
 
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"
+        integrity="sha512-nhY06wKras39lb9lRO76J4397CH1XpRSLfLJSftTeo3+q2vP7PaebILH9TqH+GRpnOhfAGjuYMVmVTOZJ+682w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+
+    <script>
+        $(".btn_search_mobile_top").on("click", function () {
+            $(".search_mobile").toggle("slow");
+        });
+
+    </script>
 </body>
+
 
 </html>
