--- a/public/acs-html/lien-he.html
+++ b/public/acs-html/lien-he.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>CÔNG TY CỔ PHẦN THIẾT KẾ XÂY DỰNG MINH BẢO</title>
 </head>
 
@@ -121,10 +124,10 @@
                             <a class="nav-link active" aria-current="page" href="#">LIÊN HỆ</a>
                         </li>
                         <li class="nav-item">
-                            <button onclick="btnSearch()" class="btn_search_mobile_top openToggle"><i
-                                    class="fa fa-search"></i></button>
+                            <div type="button" onclick="btnSearch()" class="btn_search_mobile_top"><i
+                                    class="fa fa-search"></i></div>
                             <div class="search search_mobile" id="btn_search_mobile">
-                                <form role="search" method="get" class="search-form" action="">
+                                <form role="search" method="get" class="search-form" action="https://minhbao.vn/">
                                     <input type="text" name="s" id="s" placeholder="Nhập từ khóa"
                                         class="form-control" />
                                     <button class="btn_search"><i class="fa fa-search"></i></button>
@@ -780,6 +783,17 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"
+        integrity="sha512-nhY06wKras39lb9lRO76J4397CH1XpRSLfLJSftTeo3+q2vP7PaebILH9TqH+GRpnOhfAGjuYMVmVTOZJ+682w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
+
+    <script>
+        $(".btn_search_mobile_top").on("click", function () {
+            $(".search_mobile").toggle("slow");
+        });
 
     </script>
 </body>
