--- a/public/acs-html/index.html
+++ b/public/acs-html/index.html
@@ -456,7 +456,7 @@
             </div>
         </div>
         <div class="read-more d-flex justify-content-center">
-            <a href="https://minhbao.vn/cong-trinh-tieu-bieu/" class="mt-5 text-center">Xem tất cả
+            <a href="./danh-sach-tin-tuc.html" class="mt-5 text-center">Xem tất cả
                 công
                 trình</a>
         </div>
@@ -681,7 +681,7 @@
                 </div>
             </div>
             <div class="read-more d-flex justify-content-center">
-                <a href="https://minhbao.vn/cong-trinh-tieu-bieu/" class="mt-5 text-center">Xem tất cả
+                <a href="./danh-sach-tin-tuc.html" class="mt-5 text-center">Xem tất cả
                     bài viết</a>
             </div>
         </div>
