--- a/public/acs-html/lien-he.html
+++ b/public/acs-html/lien-he.html
@@ -130,8 +130,8 @@
                             <a class="nav-link active" aria-current="page" href="./lien-he.html">LIÊN HỆ</a>
                         </li>
                         <li class="nav-item ms-4">
-                            <div type="button" onclick="btnSearch()" class="btn_search_mobile_top"><img
-                                    src="./assets/images/icon-search.svg"></img></div>
+                            <div type="button" onclick="btnSearch()" class="btn_search_mobile_top d-none d-lg-block">
+                                <img src="./assets/images/icon-search.svg"></img></div>
                             <div class="search search_mobile" id="btn_search_mobile">
                                 <form role="search" method="get" class="search-form" action="https://minhbao.vn/">
                                     <input type="text" name="s" id="s" placeholder="Nhập từ khóa"
