--- a/public/acs-html/tinh-tuoi-xay-nha.html
+++ b/public/acs-html/tinh-tuoi-xay-nha.html
@@ -137,7 +137,7 @@
                                 <li><a class="dropdown-item" href="./tinh-mat-do-xay-dung.html">Tính mật độ xây dựng</a>
                                 </li>
                                 <li><a class="dropdown-item" href="./tinh-tuoi-xay-nha.html">Tính tuổi xây nhà</a></li>
-                                <li><a class="dropdown-item" href="/">Thước lỗ ban</a> </li>
+                                <li><a class="dropdown-item" href="./thuoc-lo-ban.html">Thước lỗ ban</a> </li>
                             </ul>
                         </li>
                         <li class="nav-item">
