--- a/public/acs-html/danh-sach-tin-tuc.html
+++ b/public/acs-html/danh-sach-tin-tuc.html
@@ -68,7 +68,7 @@
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" title="Sản phẩm"
                                 role="button" aria-expanded="false">GIỚI THIỆU</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./tin-tuc-detail.html">Sơ Đồ Tổ Chức</a></li>
+                                <li><a class="dropdown-item" href="./so-do-to-chuc.html"></li>
                                 <li><a class="dropdown-item" href="./tin-tuc-detail.html">Về chúng tôi</a></li>
                                 <li><a class="dropdown-item" href="./tin-tuc-detail.html">Hoạt động Minh Bảo</a></li>
                                 <li><a class="dropdown-item" href="./tin-tuc-detail.html">Tuyển dụng</a></li>
