--- a/public/acs-html/tin-tuc-detail.html
+++ b/public/acs-html/tin-tuc-detail.html
@@ -630,15 +630,16 @@
                                                 hiển thị công khai.</span> <span class="required-field-message">Các
                                                 trường bắt buộc được đánh dấu <span class="required">*</span></span>
                                         </p>
-                                        <p class="comment-form-comment"> <textarea id="comment" name="comment" cols="30"
-                                                rows="6" class="form-control" aria-required="true" required="required"
-                                                placeholder="Bình luận"></textarea></p>
-                                        <p class="comment-form-author"><input id="author" name="author"
+                                        <p class="comment-form-comment mb-4"> <textarea id="comment" name="comment"
+                                                cols="30" rows="6" class="form-control" aria-required="true"
+                                                required="required" placeholder="Bình luận"></textarea></p>
+                                        <p class="comment-form-author mb-4"><input id="author" name="author"
                                                 class="form-control input-lg" type="text" value="" size="30"
                                                 placeholder="Họ tên &#42;" /></p>
-                                        <p class="comment-form-email"><input id="email" class="form-control input-lg"
-                                                name="email" type="text" value="" size="30"
-                                                aria-describedby="email-notes" placeholder="Email &#42;" /></p><br />
+                                        <p class="comment-form-email mb-4"><input id="email"
+                                                class="form-control input-lg" name="email" type="text" value=""
+                                                size="30" aria-describedby="email-notes" placeholder="Email &#42;" />
+                                        </p><br />
                                         <p class="form-submit"><input name="submit" type="submit" id="submit"
                                                 class="readmore" value="Gửi bình luận" /> <input type='hidden'
                                                 name='comment_post_ID' value='23477' id='comment_post_ID' />
